
syntax = "proto3";

option java_package = "org.matsim.core.utils.pb";
option java_outer_classname = "ProtoEvents";

import "matsim/Ids.proto";

/*
 * Protobuf event definition. For detailed event documentation refer to the corresponding java code.
 */
message Event {

    double time = 1;

    // X & Y ?

    oneof type {
        GenericEvent generic = 2;
        ActivityEndEvent activityEnd = 3;
        ActivityStartEvent activityStart = 4;
        LinkEnterEvent linkEnter = 5;
        LinkLeaveEvent linkLeave = 6;
        PersonArrivalEvent personalArrival = 7;
        PersonDepartureEvent personDeparture = 8;
        PersonEntersVehicleEvent personEntersVehicle = 9;
        PersonLeavesVehicleEvent personLeavesVehicle = 10;
        PersonMoneyEvent personMoney = 11;
        PersonStuckEvent personStuck = 12;
        TransitDriverStartsEvent transitDriverStarts = 13;
        VehicleAbortsEvent vehicleAborts = 14;
        VehicleEntersTrafficEvent vehicleEntersTraffic = 15;
        VehicleLeavesTrafficEvent vehicleLeavesTraffic = 16;
    }
}


message GenericEvent {

    string type = 1;
    map<string, string> attrs = 2;

}

message ActivityEndEvent {

    ProtoId linkId = 1;
    ProtoId facilityId = 2;
    ProtoId personId = 3;
    string acttype = 4;
}

message ActivityStartEvent {
    ProtoId linkId = 1;
    ProtoId facilityId = 2;
    ProtoId personId = 3;
    string acttype = 4;
}

message LinkEnterEvent {
    ProtoId linkId = 1;
    ProtoId vehicleId = 2;
}

message LinkLeaveEvent {
    ProtoId linkId = 1;
    ProtoId vehicleId = 2;
}

message PersonArrivalEvent {
    ProtoId linkId = 1;
    string legMode = 2;
    ProtoId personId = 3;
}

message PersonDepartureEvent {
    ProtoId linkId = 1;
    string legMode = 2;
    ProtoId personId = 3;
}

message PersonEntersVehicleEvent {
    ProtoId personId = 1;
    ProtoId vehicleId = 2;
}

message PersonLeavesVehicleEvent {
    ProtoId personId = 1;
    ProtoId vehicleId = 2;
}

message PersonMoneyEvent {
    ProtoId personId = 1;
    double amount = 2;
    string purpose = 3;
    string transactionPartner = 4;
}

message PersonStuckEvent {
    ProtoId personId = 1;
    ProtoId linkId = 2;
    string legMode = 3;
}

message TransitDriverStartsEvent {
    ProtoId driverId = 1;
    ProtoId vehicleId = 2;
    ProtoId transitRouteId = 3;
    ProtoId transitLineId = 4;
    ProtoId departureId = 5;
}

message VehicleAbortsEvent {
    ProtoId vehicleId = 1;
    ProtoId linkId = 2;
}

message VehicleEntersTrafficEvent {
    ProtoId driverId = 1;
    ProtoId linkId = 2;
    ProtoId vehicleId = 3;
    string networkMode = 4;
    double relativePositionOnLink = 5;
}

message VehicleLeavesTrafficEvent {
    ProtoId driverId = 1;
    ProtoId linkId = 2;
    ProtoId vehicleId = 3;
    string networkMode = 4;
    double relativePositionOnLink = 5;
}