
syntax = "proto3";

option java_package = "org.matsim.core.utils.pb";
option java_multiple_files = true;

message GenericId {
    string id = 1;
    int32 index = 2;
}

message DepartureId {
    string id = 1;
    int32 index = 2;
}

message TransitRouteId {
    string id = 1;
    int32 index = 2;
}

message TransitLineId {
    string id = 1;
    int32 index = 2;
}

message VehicleId {
    string id = 1;
    int32 index = 2;
}

message LinkId {
    string id = 1;
    int32 index = 2;
}

message PersonId {
    string id = 1;
    int32 index = 2;
}

message ActivityFacilityId {
    string id = 1;
    int32 index = 2;
}
